--- a/Web_153505_Bybko/Web_153505_Bybko/Web_153505_Bybko.csproj
+++ b/Web_153505_Bybko/Web_153505_Bybko/Web_153505_Bybko.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-Web_153505_Bybko-345feb9b-7cd1-485d-8633-db39303639d4</UserSecretsId>
