--- a/Web_153505_Bybko/Web_153505_Bybko/appsettings.json
+++ b/Web_153505_Bybko/Web_153505_Bybko/appsettings.json
@@ -10,5 +10,10 @@
   },
   "AllowedHosts": "*",
 
-  "ItemsPerPage": 3
+  "ItemsPerPage": 3,
+
+  "UriData": {
+    "ApiUri": "https://localhost:7002/api/",
+    "ISUri": ""
+  }
 }
