finally complete ultra mega cringe lab5 ;)

--- a/Web_153505_Bybko/Web_153505_Bybko.API/appsettings.json
+++ b/Web_153505_Bybko/Web_153505_Bybko.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source = MenuDb.db"
+    "Default": "Data Source = StoreDb.db"
   },
   "AppSettings": {
     "ApiUrl": "https://localhost:7002"
