--- a/Web_153505_Bybko/Web_153505_Bybko/Properties/launchSettings.json
+++ b/Web_153505_Bybko/Web_153505_Bybko/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "Web_153505_Bybko": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7001;http://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
