--- a/Web_153505_Bybko/Web_153505_Bybko/appsettings.json
+++ b/Web_153505_Bybko/Web_153505_Bybko/appsettings.json
@@ -14,6 +14,13 @@
 
   "UriData": {
     "ApiUri": "https://localhost:7002/api/",
-    "ISUri": ""
+    "ISUri": "https://localhost:7003/"
+  },
+
+  "InteractiveServiceSettings": {
+    "AuthorityUrl": "https://localhost:7003",
+    "ClientId": "interactive",
+    "ClientSecret": "511536EF-F270-4058-80CA-1C89C192F69A",
+    "Scopes": [ "api.read", "api.write" ]
   }
 }
