--- a/Web_153505_Bybko/Web_153505_Bybko.IdentityServer/Web_153505_Bybko.IdentityServer.csproj
+++ b/Web_153505_Bybko/Web_153505_Bybko.IdentityServer/Web_153505_Bybko.IdentityServer.csproj
@@ -9,6 +9,10 @@
 		<PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.3.5" />
 
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.12" />
+
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.12" />
+
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
 		<PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
 
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.12" />
@@ -19,5 +23,9 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="wwwroot\Images\" />
 	</ItemGroup>
 </Project>
