--- a/Web_153505_Bybko/Web_153505_Bybko/appsettings.json
+++ b/Web_153505_Bybko/Web_153505_Bybko/appsettings.json
@@ -22,5 +22,21 @@
     "ClientId": "interactive",
     "ClientSecret": "49C1A7E1-0C79-4A89-A3D6-A37998FB86B0",
     "Scopes": [ "api.read", "api.write" ]
+  },
+
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Web_153505_Bybko.Middleware": "Debug",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" }
+    ]
   }
 }
