--- a/Web_153505_Bybko/Web_153505_Bybko/Web_153505_Bybko.csproj
+++ b/Web_153505_Bybko/Web_153505_Bybko/Web_153505_Bybko.csproj
@@ -22,6 +22,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
+    <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
