--- a/Web_153505_Bybko/Web_153505_Bybko.API/appsettings.json
+++ b/Web_153505_Bybko/Web_153505_Bybko.API/appsettings.json
@@ -10,5 +10,6 @@
     "Default": "Data Source = StoreDb.db"
   },
   "ApiUrl": "https://localhost:7002",
-  "isUri": "https://localhost:7003"
+  "isUri": "https://localhost:7003",
+  "BlazorApp": "https://localhost:7004"
 }
